--- a/afrpc-demo-consumer/src/main/resources/application.yaml
+++ b/afrpc-demo-consumer/src/main/resources/application.yaml
@@ -2,3 +2,10 @@ server:
   port: 8088
 afrpc:
   providers: http://localhost:8081,http://localhost:8082,http://localhost:8083
+  zkServer: localhost:2181
+  zkRoot: afrpc
+
+app:
+  id: app1
+  namespace: public
+  env: dev
