--- a/afrpc-core/pom.xml
+++ b/afrpc-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.yoube</groupId>
         <artifactId>afrpc</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${afrpc.version}</version>
     </parent>
     <artifactId>afrpc-core</artifactId>
     <name>afrpc-core</name>
@@ -50,6 +50,17 @@
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
             <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>3.2.0</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
+            <version>4.1.0</version>
         </dependency>
     </dependencies>
 
