update pom.xml for publish maven central

--- a/afrpc-demo-consumer/pom.xml
+++ b/afrpc-demo-consumer/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.alfaio</groupId>
         <artifactId>afrpc</artifactId>
-        <version>${version}</version>
+        <version>${afrpc.version}</version>
     </parent>
     <artifactId>afrpc-demo-consumer</artifactId>
     <name>afrpc-demo-consumer</name>
@@ -15,12 +15,11 @@
         <dependency>
             <groupId>io.github.alfaio</groupId>
             <artifactId>afrpc-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.github.alfaio</groupId>
             <artifactId>afrpc-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${afrpc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -40,38 +39,13 @@
         <dependency>
             <groupId>io.github.alfaio</groupId>
             <artifactId>afrpc-demo-provider</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${afrpc.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <configuration>
-                    <updatePomFile>true</updatePomFile>
-                    <flattenMode>oss</flattenMode>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>flatten</id>
-                        <goals>
-                            <goal>flatten</goal>
-                        </goals>
-                        <phase>process-resources</phase>
-                    </execution>
-                    <execution>
-                        <id>flatten.clean</id>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                        <phase>clean</phase>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
