--- a/afrpc-core/pom.xml
+++ b/afrpc-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.alfaio</groupId>
         <artifactId>afrpc</artifactId>
-        <version>${version}</version>
+        <version>${afrpc.version}</version>
     </parent>
     <artifactId>afrpc-core</artifactId>
     <name>afrpc-core</name>
