--- a/afrpc-demo-provider/pom.xml
+++ b/afrpc-demo-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.alfaio</groupId>
         <artifactId>afrpc</artifactId>
-        <version>${version}</version>
+        <version>${afrpc.version}</version>
     </parent>
     <artifactId>afrpc-demo-provider</artifactId>
     <name>afrpc-demo-provider</name>
@@ -15,18 +15,16 @@
         <dependency>
             <groupId>io.github.alfaio</groupId>
             <artifactId>afrpc-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${afrpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.alfaio</groupId>
             <artifactId>afrpc-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
