--- a/afrpc-core/pom.xml
+++ b/afrpc-core/pom.xml
@@ -23,6 +23,11 @@
             <version>5.1.0</version>
         </dependency>
         <dependency>
+            <groupId>io.github.alfaio</groupId>
+            <artifactId>afconfig-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
